--- a/pirate.html
+++ b/pirate.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html> <head> <style>
+    #search_traps{
+        background-color: antiquewhite ;
+    }
     .flex-container {
       display: flex;  flex-direction:row;
       background-color:rgb(185, 212, 212);
@@ -43,5 +46,59 @@
         <p class = "lead" id="click_help">Click for help</p>
         <p class="lead" id="help">Help report</p>
 	</div>
+    <br>
+    <hr>
+    <h6 class="display-4">game field</h6>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+        </div>
+            <div class="row">
+            <div class="col-md-2"><img src="Treasure.jpeg" alt="Treasure" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="Treasure.jpeg" alt="Treasure" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="Treasure.jpeg" alt="Treasure" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="Treasure.jpeg" alt="Treasure" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="Treasure.jpeg" alt="Treasure" style="width:100px;height:100px;"></div>
+        </div>
+            <div class="row">
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+        </div>
+            <div class="row">
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+        </div>
+            <div class="row">
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+        </div>
+    </div>
+	
 </body>
+<script>
+	function makeNewDiv(){
+		
+		let element = document.createElement("div")
+		element.innerHTML = "an item after 3"
+		element.style.color = "orange"
+
+		
+		let container = document.getElementById('target')
+		container.appendChild(element)
+		
+	}
+</script>
 </html>	
