--- a/pirate.html
+++ b/pirate.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html> <head> <style>
-    #search_traps{
+    #target{
         background-color: antiquewhite ;
     }
+    
     .flex-container {
       display: flex;  flex-direction:row;
       background-color:rgb(185, 212, 212);
