--- a/pirate.html
+++ b/pirate.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html> <head> <style>
     #target{
-        background-color: antiquewhite ;
+        background-color: rgb(164, 224, 204) ;
     }
-    
     .flex-container {
       display: flex;  flex-direction:row;
       background-color:rgb(185, 212, 212);
@@ -53,22 +52,22 @@
     <div class="container">
         <div class="row">
             <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="Treasure.jpeg" alt="Treasure" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="trap.jpg" alt="trap" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="hat.jpg" alt="hat" style="width:100px;height:100px;"></div>
             <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
         </div>
             <div class="row">
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
             <div class="col-md-2"><img src="Treasure.jpeg" alt="Treasure" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="Treasure.jpeg" alt="Treasure" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="Treasure.jpeg" alt="Treasure" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="Treasure.jpeg" alt="Treasure" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="Treasure.jpeg" alt="Treasure" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="trap.jpg" alt="trap" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="hat.jpg" alt="hat" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
         </div>
             <div class="row">
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="trap.jpg" alt="trap" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="trap.jpg" alt="trap" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="trap.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
             <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
             <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
         </div>
