--- a/pirate.html
+++ b/pirate.html
@@ -8,12 +8,11 @@
       background-color:rgb(185, 212, 212);
   }
 
-.flex-container > div {  /*div children of the flex container*/
+.flex-container > div { 
   background-color: #f1f1f1; 
   margin: 10px;  padding: 20px;  font-size: 30px;
 }
 
-/* Responsive layout */
 @media (max-width: 600px) { 
 	 .flex-container{
 		 flex-direction:column;
@@ -51,54 +50,133 @@
     <h6 class="display-4">game field</h6>
     <div class="container">
         <div class="row">
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="Treasure.jpeg" alt="Treasure" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="trap.jpg" alt="trap" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="hat.jpg" alt="hat" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            
         </div>
             <div class="row">
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="Treasure.jpeg" alt="Treasure" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="trap.jpg" alt="trap" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="hat.jpg" alt="hat" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+              <div class="col-md-2"><img src="treasure location.jpg" id="0" alt="searchlocation" style="width:100px;height:100px;" onclick="check(0)"></div>
+              <div class="col-md-2"><img src="treasure location.jpg" id="1" alt="searchlocation" style="width:100px;height:100px;" onclick="check(1)"></div>
+              <div class="col-md-2"><img src="treasure location.jpg" id="2" alt="searchlocation" style="width:100px;height:100px;" onclick="check(2)"></div>
+              <div class="col-md-2"><img src="treasure location.jpg" id="3" alt="searchlocation" style="width:100px;height:100px;" onclick="check(3)"></div>
+              <div class="col-md-2"><img src="treasure location.jpg" id="4" alt="searchlocation" style="width:100px;height:100px;" onclick="check(4)"></div>
         </div>
             <div class="row">
-            <div class="col-md-2"><img src="trap.jpg" alt="trap" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="trap.jpg" alt="trap" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="trap.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+              <div class="col-md-2"><img src="treasure location.jpg" id="5" alt="searchlocation" style="width:100px;height:100px;" onclick="check(5)"></div>
+              <div class="col-md-2"><img src="treasure location.jpg" id="6" alt="searchlocation" style="width:100px;height:100px;" onclick="check(6)"></div>
+              <div class="col-md-2"><img src="treasure location.jpg" id="7" alt="searchlocation" style="width:100px;height:100px;" onclick="check(7)"></div>
+              <div class="col-md-2"><img src="treasure location.jpg" id="8" alt="searchlocation" style="width:100px;height:100px;" onclick="check(8)"></div>
+              <div class="col-md-2"><img src="treasure location.jpg" id="9" alt="searchlocation" style="width:100px;height:100px;" onclick="check(9)"></div>
+        </div>    
+            <div class="row">
+            <div class="col-md-2"><img src="treasure location.jpg" id="10" alt="searchlocation" style="width:100px;height:100px;" onclick="check(10)"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" id="11" alt="searchlocation" style="width:100px;height:100px;" onclick="check(11)"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" id="12" alt="searchlocation" style="width:100px;height:100px;" onclick="check(12)"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" id="13" alt="searchlocation" style="width:100px;height:100px;" onclick="check(13)"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" id="14" alt="searchlocation" style="width:100px;height:100px;" onclick="check(14)"></div>
         </div>
             <div class="row">
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" id="15" alt="searchlocation" style="width:100px;height:100px;" onclick="check(15)"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" id="16" alt="searchlocation" style="width:100px;height:100px;" onclick="check(16)"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" id="17" alt="searchlocation" style="width:100px;height:100px;" onclick="check(17)"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" id="18" alt="searchlocation" style="width:100px;height:100px;" onclick="check(18)"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" id="19" alt="searchlocation" style="width:100px;height:100px;" onclick="check(19)"></div>
         </div>
-            <div class="row">
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" alt="searchlocation" style="width:100px;height:100px;"></div>
-        </div>
+      </div>
+           <div class="row">
+           <div class="col-md-2"><img src="treasure location.jpg" id="20" alt="searchlocation" style="width:100px;height:100px;" onclick="check(20)"></div>
+           <div class="col-md-2"><img src="treasure location.jpg" id="21" alt="searchlocation" style="width:100px;height:100px;" onclick="check(21)"></div>
+           <div class="col-md-2"><img src="treasure location.jpg" id="22" alt="searchlocation" style="width:100px;height:100px;" onclick="check(22)"></div>
+           <div class="col-md-2"><img src="treasure location.jpg" id="23" alt="searchlocation" style="width:100px;height:100px;" onclick="check(23)"></div>
+           <div class="col-md-2"><img src="treasure location.jpg" id="24" alt="searchlocation" style="width:100px;height:100px;" onclick="check(24)"></div>
+      </div>
     </div>
-	
+    <div id="button" type="button" class="btn btn-success" onclick="reset()">New Game</div>	
 </body>
 <script>
-	function makeNewDiv(){
-		
-		let element = document.createElement("div")
-		element.innerHTML = "an item after 3"
-		element.style.color = "orange"
+	let ids = []
+  for(let i=0;i<25;i++)
+  {
+    ids[i]=i;
+  }
+  let checkCount = 0
+  let penalty = 0
+  let lastCheck = 0
+  let treasureLocation = 5
+  let trapLocation = 18
+  let gameOver = false
+  function check(p)
+  {
+    if(gameOver)
+    {
+      return
+    }
+    const img_id = ids[p]
+    tre_loc_img = document.getElementById(img_id)
+    if(p==treasureLocation)
+    {
+      tre_loc_img.src = "Treasure.jpeg"
+      gameOver=true
+      penalty = penalty-3
+    }
+    else if (p== trapLocation)
+    {
+      tre_loc_img.src = "trap.jpg"
+      gameOver=true
+      penalty=penalty+4
+    }
+    else
+    {
+      tre_loc_img.src="hat.jpg"
+    }
+    checkCount=checkCount+1
+    penalty=penalty+1
+    loc_text = document.getElementById("locations")
+    loc_text.innerHTML = `Number of locations checked is ${checkCount}`
+    pen_text = document.getElementById("penalty")
+    pen_text.innerHTML=`Penalty is ${penalty}`
+    lastCheck=p
 
+  }
+  function help()
+  {
+    let col = lastCheck%5
+    let row = Math.floor(lastCheck/5)
+
+    let treasureCol = treasureLocation%5
+    let treasureRow = Math.floor(treasureLocation/5)
+
+    let col_diff = Math.abs(col-treasureCol) 
+    let row_diff = Math.abs(row-treasureRow)
+
+    let report = ""
+
+    if(((col_diff<=1)&&(row_diff==0))||((col_diff==0)&&(row_diff<=1)))
+    {
+      report = "Can smell it"
+    }
+    else if(col_diff+row_diff==2)
+    {
+      report = "Close Matie"
+    }
+    else
+    {
+      report = "Step Faster"
+    }
+    penalty=penalty+2
+    pen_text = document.getElementById("penalty")
+    pen_text.innerHTML=`Penalty is ${penalty}`
+    help_text = document.getElementById("help")
+    help_text.innerHTML=`Help report ${report}`
+  }
+
+  function reset() {
+            checkCount = 0;
+            penalty = 0
+            treasureLocation = Math.round(Math.random() * (24));
+            trapLocation = Math.round(Math.random() * (24));
+            document.getElementById("locations").innerHTML = `Number of locations checked is ${checkCount}`
+            document.getElementById("penalty").innerHTML = `Penalty is ${penalty}`
+
+        }
 		
-		let container = document.getElementById('target')
-		container.appendChild(element)
-		
-	}
 </script>
 </html>	
