--- a/pirate.html
+++ b/pirate.html
@@ -52,26 +52,26 @@
         <div class="row">
             
         </div>
-            <div class="row">
-              <div class="col-md-2"><img src="treasure location.jpg" id="0" alt="searchlocation" style="width:100px;height:100px;" onclick="check(0)"></div>
-              <div class="col-md-2"><img src="treasure location.jpg" id="1" alt="searchlocation" style="width:100px;height:100px;" onclick="check(1)"></div>
-              <div class="col-md-2"><img src="treasure location.jpg" id="2" alt="searchlocation" style="width:100px;height:100px;" onclick="check(2)"></div>
-              <div class="col-md-2"><img src="treasure location.jpg" id="3" alt="searchlocation" style="width:100px;height:100px;" onclick="check(3)"></div>
-              <div class="col-md-2"><img src="treasure location.jpg" id="4" alt="searchlocation" style="width:100px;height:100px;" onclick="check(4)"></div>
+              <div class="row">
+              <div class="col-md-2"><img src="treasure location.jpg" id="0" alt="searchlocation" style="width:200px;height:100px;" onclick="check(0)"></div>
+              <div class="col-md-2"><img src="treasure location.jpg" id="1" alt="searchlocation" style="width:200px;height:100px;" onclick="check(1)"></div>
+              <div class="col-md-2"><img src="treasure location.jpg" id="2" alt="searchlocation" style="width:200px;height:100px;" onclick="check(2)"></div>
+              <div class="col-md-2"><img src="treasure location.jpg" id="3" alt="searchlocation" style="width:200px;height:100px;" onclick="check(3)"></div>
+              <div class="col-md-2"><img src="treasure location.jpg" id="4" alt="searchlocation" style="width:200px;height:100px;" onclick="check(4)"></div>
         </div>
-            <div class="row">
-              <div class="col-md-2"><img src="treasure location.jpg" id="5" alt="searchlocation" style="width:100px;height:100px;" onclick="check(5)"></div>
-              <div class="col-md-2"><img src="treasure location.jpg" id="6" alt="searchlocation" style="width:100px;height:100px;" onclick="check(6)"></div>
-              <div class="col-md-2"><img src="treasure location.jpg" id="7" alt="searchlocation" style="width:100px;height:100px;" onclick="check(7)"></div>
-              <div class="col-md-2"><img src="treasure location.jpg" id="8" alt="searchlocation" style="width:100px;height:100px;" onclick="check(8)"></div>
-              <div class="col-md-2"><img src="treasure location.jpg" id="9" alt="searchlocation" style="width:100px;height:100px;" onclick="check(9)"></div>
+              <div class="row">
+              <div class="col-md-2"><img src="treasure location.jpg" id="5" alt="searchlocation" style="width:200px;height:100px;" onclick="check(5)"></div>
+              <div class="col-md-2"><img src="treasure location.jpg" id="6" alt="searchlocation" style="width:200px;height:100px;" onclick="check(6)"></div>
+              <div class="col-md-2"><img src="treasure location.jpg" id="7" alt="searchlocation" style="width:200px;height:100px;" onclick="check(7)"></div>
+              <div class="col-md-2"><img src="treasure location.jpg" id="8" alt="searchlocation" style="width:200px;height:100px;" onclick="check(8)"></div>
+              <div class="col-md-2"><img src="treasure location.jpg" id="9" alt="searchlocation" style="width:200px;height:100px;" onclick="check(9)"></div>
         </div>    
-            <div class="row">
-            <div class="col-md-2"><img src="treasure location.jpg" id="10" alt="searchlocation" style="width:100px;height:100px;" onclick="check(10)"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" id="11" alt="searchlocation" style="width:100px;height:100px;" onclick="check(11)"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" id="12" alt="searchlocation" style="width:100px;height:100px;" onclick="check(12)"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" id="13" alt="searchlocation" style="width:100px;height:100px;" onclick="check(13)"></div>
-            <div class="col-md-2"><img src="treasure location.jpg" id="14" alt="searchlocation" style="width:100px;height:100px;" onclick="check(14)"></div>
+            <div class="row" style="width:200px;height:100px;" >
+            <div class="col-md-2"><img src="treasure location.jpg" id="10" alt="searchlocation"  onclick="check(10)"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" id="11" alt="searchlocation"  onclick="check(11)"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" id="12" alt="searchlocation"  onclick="check(12)"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" id="13" alt="searchlocation"  onclick="check(13)"></div>
+            <div class="col-md-2"><img src="treasure location.jpg" id="14" alt="searchlocation"  onclick="check(14)"></div>
         </div>
             <div class="row">
             <div class="col-md-2"><img src="treasure location.jpg" id="15" alt="searchlocation" style="width:100px;height:100px;" onclick="check(15)"></div>
@@ -80,14 +80,14 @@
             <div class="col-md-2"><img src="treasure location.jpg" id="18" alt="searchlocation" style="width:100px;height:100px;" onclick="check(18)"></div>
             <div class="col-md-2"><img src="treasure location.jpg" id="19" alt="searchlocation" style="width:100px;height:100px;" onclick="check(19)"></div>
         </div>
-      </div>
+        </div>
            <div class="row">
            <div class="col-md-2"><img src="treasure location.jpg" id="20" alt="searchlocation" style="width:100px;height:100px;" onclick="check(20)"></div>
            <div class="col-md-2"><img src="treasure location.jpg" id="21" alt="searchlocation" style="width:100px;height:100px;" onclick="check(21)"></div>
            <div class="col-md-2"><img src="treasure location.jpg" id="22" alt="searchlocation" style="width:100px;height:100px;" onclick="check(22)"></div>
            <div class="col-md-2"><img src="treasure location.jpg" id="23" alt="searchlocation" style="width:100px;height:100px;" onclick="check(23)"></div>
            <div class="col-md-2"><img src="treasure location.jpg" id="24" alt="searchlocation" style="width:100px;height:100px;" onclick="check(24)"></div>
-      </div>
+        </div>
     </div>
     <div id="button" type="button" class="btn btn-success" onclick="reset()">New Game</div>	
 </body>
