--- a/merger.html
+++ b/merger.html
@@ -2,15 +2,15 @@
 <html> <head> <style>
     .flex-container {
       display: flex;  flex-direction:row;
-      background-color: rgb(103, 228, 149);
+      background-color: red;
   }
 
-.flex-container > div {  
+.flex-container > div {  /*div children of the flex container*/
   background-color: #f1f1f1; 
   margin: 10px;  padding: 20px;  font-size: 30px;
 }
 
-
+/* Responsive layout */
 @media (max-width: 600px) { 
 	 .flex-container{
 		 flex-direction:column;
@@ -44,9 +44,9 @@
 
     <br>
 		<div class="flex-container" id="target">
-		  <div class="merger">row 1</div>   
-		  <div class="merger">row 2</div>  
-		  <div class="merger">row 3</div>  
+		  <div class="merger">row item 1</div>   
+		  <div class="merger">row item 2</div>  
+		  <div class="merger">row item 3</div>  
 		</div>
 	
 	<p> Press the button to create an new element of type div and then add it to the container.</p>
