made random change

--- a/react.html
+++ b/react.html
@@ -28,6 +28,7 @@
   {
     reactTime = undefined;
     endTime = Date.now();
+    let randomCountDown = Math.round(Math.random() * (10 - 2) + 2)
     for(let i=0;i<randomCountDown;i++)
     {
         setTimeout( function () {
