--- a/pirate.html
+++ b/pirate.html
@@ -78,7 +78,7 @@
            <div class="col-md-2"><img src="treasure location.jpg" id="24" alt="searchlocation" style="width:200px;height:100px;" onclick="check(24)"></div>
         </div>
     </div>
-    
+    <div id="button" type="button" class="btn btn-success" onclick="reset()">New Game</div>
 </body>
 <script>
 	let ids = []
